<resources>
    <string name="app_name">Shiba</string>

    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_loading">Loading…</string>
    <string name="title_error">Error</string>
    <string name="title_scan">Nearby Senses</string>
    <string name="title_api_host">Currently Targeting</string>
    <string name="title_device_support_level">Device Support Level</string>
    <string name="title_sense">Sense</string>
    <string name="title_wifi_networks">Scan for WiFi networks</string>
    <string name="title_network">Network</string>
    <string name="title_sign_into_wifi_network">Sign into WiFi network</string>
    <string name="title_other_network">Other…</string>
    <string name="title_simulate_on_boarding">Simulate on boarding</string>
    <string name="title_include_delays">Include Delays</string>
    <string name="title_randomize_delays">Randomize Delays</string>

    <string name="message_confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="message_generic_error">An unexpected error has occurred.</string>
    <string name="message_access_token_required">Cannot simulate on boarding without being signed in.</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_scan">Scan</string>
    <string name="action_simulate_on_boarding">Simulate on boarding</string>
    <string name="action_put_into_normal_mode">Normal Mode</string>
    <string name="action_put_into_pairing_mode">Pairing Mode</string>
    <string name="action_forget_phone">Forget Phone</string>
    <string name="action_factory_reset">Factory Reset</string>
    <string name="action_get_wifi_network">Get WiFi Network</string>
    <string name="action_set_wifi_network">Set WiFi Network</string>
    <string name="action_pair_pill">Pair Pill</string>
    <string name="action_link_account">Link Account</string>
    <string name="action_push_data">Push Data</string>
    <string name="action_busy_led">Busy LED</string>
    <string name="action_trippy_led">Trippy LED</string>
    <string name="action_stop_led_animated">Stop LED Animated</string>
    <string name="action_stop_led">Stop LED</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_start">Start</string>

    <string name="status_connecting">Connecting…</string>
    <string name="status_discovering_services">Discovering Services…</string>

    <string name="security_type_open">Open</string>
    <string name="security_type_wep">WEP</string>
    <string name="security_type_wpa">WPA</string>
    <string name="security_type_wpa2">WPA2</string>
</resources>
