<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/gap_outer"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_small"
            android:textColor="@android:color/white"
            android:textAppearance="@style/AppTheme.Text.H2"
            android:text="@string/title_api_host"/>

        <TextView
            android:id="@+id/fragment_landing_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_medium"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_small"
            android:textColor="@android:color/white"
            android:textAppearance="@style/AppTheme.Text.H2"
            android:text="@string/title_device_support_level"/>

        <TextView
            android:id="@+id/fragment_landing_support_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_bar_height"
        android:orientation="horizontal"
        android:gravity="center"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/fragment_landing_scan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_scan"
            style="?android:attr/buttonBarButtonStyle"/>

        <View style="@style/AppTheme.Divider.Horizontal.Inset" />

        <Button
            android:id="@+id/fragment_landing_session"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_sign_in"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?android:windowContentOverlay">

        <ListView
            android:id="@+id/fragment_landing_log_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</LinearLayout>