<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gap_outer"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_large"
            android:textAppearance="@style/AppTheme.Text.H1"
            android:text="@string/action_sign_in" />

        <Spinner
            android:id="@+id/fragment_sign_in_environment"
            android:layout_marginBottom="@dimen/gap_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/fragment_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_medium"
            android:inputType="textEmailAddress"
            android:hint="@string/title_email"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:nextFocusForward="@+id/fragment_sign_in_email">

            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/fragment_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_large"
            android:inputType="textPassword"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:hint="@string/title_password" />

        <Button
            android:id="@+id/fragment_sign_in_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"/>

    </LinearLayout>

</ScrollView>